Changes LOgo & Content

--- a/24-7-emergency-plumbing.html
+++ b/24-7-emergency-plumbing.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Site Title -->
-    <title>SwiftRooter - Plumbing Service Template</title>
+    <title>QnixRooter - Plumbing Service Template</title>
 
     <!-- Character Set and Responsive Meta Tags -->
     <meta charset="utf-8" />
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-                <a href="index.html"><img src="assets/images/logo/logo.jpeg" alt="Brand Logo" /></a>
+                <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -73,7 +73,7 @@
             </div>
             <div class="services__details-grid hero__banner--section" data-aos="fade-up" data-aos-duration="1000">
                 <div class="services__main-images">
-                    <img src="assets/images/services-man-full-1.avif" alt="services man" />
+                    <img src="assets/images/services/services-man-full-1.png" alt="services man" />
                 </div>
                 <div class="services__details-content">
                     <div class="section__header">
@@ -87,7 +87,7 @@
                             </svg>24/7 Emergency Plumbing</span>
                         <h2 class="main-title">24/7 Emergency Plumber – Fast & Reliable Service</h2>
                         <p class="desc">Plumbing emergencies can happen anytime, and when they do, you need a trusted
-                            professional to fix the issue quickly. At SwiftRooter Plumbing, we offer 24/7 emergency
+                            professional to fix the issue quickly. At QnixRooter Plumbing, we offer 24/7 emergency
                             plumbing services to handle leaks, burst pipes, clogs, and other urgent plumbing issues. Our
                             expert plumbers are always ready to provide fast, efficient, and professional solutions.</p>
                     </div>
@@ -135,7 +135,7 @@
                         </div>
                         <p class="contact-form__disclaimer">
                             By submitting your contact details, you agree to receive automated SMS/MMS messages from
-                            SwiftRooter
+                            QnixRooter
                             Plumbing. Message & data rates may apply.
                         </p>
                     </form>
@@ -158,7 +158,7 @@
                                 </path>
                             </g>
                         </svg>Why Choose Us</span>
-                    <h2 class="main-title">Why Choose SwiftRooter?</h2>
+                    <h2 class="main-title">Why Choose QnixRooter?</h2>
                     <p class="desc">Reliable, fast, and professional plumbing solutions with 24/7 availability, upfront
                         pricing, and
                         expert service for homes and businesses.</p>
@@ -279,7 +279,7 @@
                         Questions & Answers</span>
                     <h2 class="main-title">Frequently Asked<br> Questions</h2>
                     <div class="faq-images">
-                        <img src="assets/images/faq-man.avif" alt="FAQ Image" />
+                        <img src="assets/images/services/pleased-young.jpg" alt="FAQ Image" />
                     </div>
                 </div>
 
@@ -346,7 +346,8 @@
                         </h3>
                         <p>Contact us for support, inquiries, or partnerships—we’re happy to assist!
                         </p>
-                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
+                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png"
+                                alt="" />
                             Contact Us</a>
                     </div>
 
@@ -364,7 +365,7 @@
                 <!-- Brand Column -->
                 <div class="footer-brand">
                     <div class="footer-brand__logo">
-                        <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="SwiftRooter Logo" /></a>
+                        <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
                     </div>
                     <p class="footer-brand__description">
                         Fast, reliable & professional 24/7 plumbing & rooter services.
