--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Site Title -->
-    <title>SwiftRooter - Plumbing Service Template</title>
+    <title>QnixRooter - Plumbing Service Template</title>
 
     <!-- Character Set and Responsive Meta Tags -->
     <meta charset="utf-8" />
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-                <a href="index.html"><img src="assets/images/logo/logo.jpeg" alt="Brand Logo" /></a>
+               <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -57,10 +57,10 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- About SwiftRooter Section Start -->
-    <section class="about__swiftrooter--section pb-80">
+    <!-- About QnixRooter Section Start -->
+    <section class="about__Qnixrooter--section pb-80">
         <div class="auto-container">
-            <div class="about__swiftrooter--grid">
+            <div class="about__Qnixrooter--grid">
                 <div class="section__header" data-aos="fade-up" data-aos-duration="1000">
                     <span class="sub-title">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
@@ -71,21 +71,21 @@
                             </g>
                         </svg>
                         About Us</span>
-                    <h2 class="main-title">About SwiftRooter Plumbing</h2>
-                    <p class="desc">SwiftRooter Plumbing is a trusted name in the industry, offering top-quality
+                    <h2 class="main-title">About QnixRooter Plumbing</h2>
+                    <p class="desc">QnixRooter Plumbing is a trusted name in the industry, offering top-quality
                         residential and commercial plumbing services. With years of experience, we take pride in
                         delivering efficient, reliable, and customer-focused solutions. Whether it's a small repair or a
                         major installation, our team is committed to ensuring your plumbing system functions flawlessly.
                     </p>
-                    <img src="assets/images/about-us-1.avif" alt="" />
+                    <img src="assets/images/services/about-us-1.jpg" alt="" />
                 </div>
                 <div class="about__images--right" data-aos="fade-up" data-aos-duration="1200">
-                    <img src="assets/images/about-us-2.avif" alt="" />
+                    <img src="assets/images/services/about-us-2.avif" alt="" />
                 </div>
             </div>
         </div>
     </section>
-    <!-- About SwiftRooter Section End -->
+    <!-- About QnixRooter Section End -->
 
     <!-- Plumbing Expert Section Start -->
     <section class="plumbing__expert--section pt-60 pb-80">
@@ -112,7 +112,7 @@
             <div class="plumbing__expert--grid" data-aos="fade-up" data-aos-duration="1200">
                 <div class="plumbing__expert--card">
                     <div class="plumbing__expert--imgges">
-                        <img src="assets/images/plumbing__expert-1.avif" alt="" />
+                        <img src="assets/images/services/plumbing__expert-1.png" alt="" />
                     </div>
                     <div class="plumbing__expert--details">
                         <h2 class="sec-title">James Carter</h2>
@@ -142,41 +142,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="plumbing__expert--card">
+                 <div class="plumbing__expert--card">
                     <div class="plumbing__expert--imgges">
-                        <img src="assets/images/plumbing__expert-2.avif" alt="" />
-                    </div>
-                    <div class="plumbing__expert--details">
-                        <h2 class="sec-title">Sarah Mitchell</h2>
-                        <div class="badge-rating-sec">
-                            <div class="badge-completed">
-                                <span class="badge">800+ Job Completed</span>
-                            </div>
-                            <div class="rating-number">
-                                <div class="svgcontainer">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                        fill="none" stroke="#ff951c" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" class="feather feather-star">
-                                        <polygon
-                                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
-                                        </polygon>
-                                    </svg>
-                                </div>
-                                <div class="ratingtext">
-                                    <p>(4.9)</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="desc">
-                            <p>Sarah is known for her expertise in leak detection and providing reliable bathroom
-                                plumbing solutions.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="plumbing__expert--card">
-                    <div class="plumbing__expert--imgges">
-                        <img src="assets/images/plumbing__expert-3.avif" alt="" />
+                        <img src="assets/images/services/plumbing__expert-3.png" alt="" />
                     </div>
                     <div class="plumbing__expert--details">
                         <h2 class="sec-title">Robert Thompson</h2>
@@ -206,6 +174,39 @@
                         </div>
                     </div>
                 </div>
+                <div class="plumbing__expert--card">
+                    <div class="plumbing__expert--imgges">
+                        <img src="assets/images/services/plumbing__expert-2.png" alt="" />
+                    </div>
+                    <div class="plumbing__expert--details">
+                        <h2 class="sec-title">James Mitchell</h2>
+                        <div class="badge-rating-sec">
+                            <div class="badge-completed">
+                                <span class="badge">800+ Job Completed</span>
+                            </div>
+                            <div class="rating-number">
+                                <div class="svgcontainer">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="#ff951c" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="feather feather-star">
+                                        <polygon
+                                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                                        </polygon>
+                                    </svg>
+                                </div>
+                                <div class="ratingtext">
+                                    <p>(4.9)</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="desc">
+                            <p>James is known for her expertise in leak detection and providing reliable bathroom
+                                plumbing solutions.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+               
             </div>
         </div>
     </section>
@@ -224,17 +225,17 @@
                         </g>
                     </svg>
                     Our Location</span>
-                <h2 class="main-title">Where Does SwiftRooter<br> Operate?</h2>
+                <h2 class="main-title">Where Does QnixRooter<br> Operate?</h2>
                 <p class="desc">We proudly serve multiple locations, ensuring prompt<br> and reliable plumbing services
                     near you.</p>
             </div>
             <div class="our__location--grid">
                 <div class="our__location--content" data-aos="fade-up" data-aos-duration="1200">
                     <div class="location__icon-box">
-                        <img src="assets/images/location-1.avif" alt="Location Images" />
+                        <img src="assets/images/services/location-1.jpg" alt="Location Images" />
                     </div>
                     <div class="location__text-box">
-                        <h2>SwiftRooter Headquarters</h2>
+                        <h2>QnixRooter Headquarters</h2>
                         <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
                                 <g weight="regular">
                                     <path
@@ -247,10 +248,10 @@
 
                 <div class="our__location--content" data-aos="fade-up" data-aos-duration="1600">
                     <div class="location__icon-box">
-                        <img src="assets/images/location-2.avif" alt="Location Images" />
+                        <img src="assets/images/services/location-2.jpg" alt="Location Images" />
                     </div>
                     <div class="location__text-box">
-                        <h2>SwiftRooter Office</h2>
+                        <h2>QnixRooter Office</h2>
                         <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
                                 <g weight="regular">
                                     <path
@@ -273,7 +274,7 @@
                 <!-- Brand Column -->
                 <div class="footer-brand">
                     <div class="footer-brand__logo">
-                        <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="SwiftRooter Logo" /></a>
+                         <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
                     </div>
                     <p class="footer-brand__description">
                         Fast, reliable & professional 24/7 plumbing & rooter services.
