--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Site Title -->
-    <title>SwiftRooter - Plumbing Service Template</title>
+    <title>QnixRooter - Plumbing Service Template</title>
 
     <!-- Character Set and Responsive Meta Tags -->
     <meta charset="utf-8" />
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-                <a href="index.html"><img src="assets/images/logo/logo.jpeg" alt="Brand Logo" /></a>
+                <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -53,7 +53,6 @@
                 <span class="navbar__toggle-icon"></span>
                 <span class="navbar__toggle-icon"></span>
             </button>
-
         </div>
     </header>
     <!-- Header Section End -->
@@ -73,7 +72,7 @@
                     Contact us</span>
                 <h2 class="main-title">Contact us</h2>
             </div>
-            <div class="contact__us--grid"  data-aos="fade-up" data-aos-duration="1000">
+            <div class="contact__us--grid" data-aos="fade-up" data-aos-duration="1000">
                 <div class="get-in-touch">
                     <div class="section__header">
                         <h2 class="main-title">Get in Touch with Us</h2>
@@ -87,11 +86,11 @@
                                     <img src="assets/images/contact-email.png" alt="" />
                                 </div>
                                 <div class="contact-us-innner-text">
-                                    <p>hello@swiftrooter.com</p>
+                                    <p>hello@Qnixrooter.com</p>
                                 </div>
                             </div>
                             <div class="contact-us-innner-right">
-                                <a href="mailto:hello@swiftrooter.com " class="btn btn-primary">Message</a>
+                                <a href="mailto:hello@Qnixrooter.com " class="btn btn-primary">Message</a>
                             </div>
                         </div>
                         <div class="contact-us-innner">
@@ -171,7 +170,7 @@
                         Questions & Answers</span>
                     <h2 class="main-title">Frequently Asked<br> Questions</h2>
                     <div class="faq-images">
-                        <img src="assets/images/faq-man.avif" alt="FAQ Image" />
+                        <img src="assets/images/services/pleased-young.jpg" alt="FAQ Image" />
                     </div>
                 </div>
 
@@ -198,7 +197,6 @@
                                     sewer backups, and major leaks.</p>
                             </div>
                         </div>
-
                         <div class="faq-item">
                             <div class="faq-question">
                                 <h3>How can I schedule a service appointment?</h3>
@@ -209,7 +207,6 @@
                                     hotline to choose a convenient time.</p>
                             </div>
                         </div>
-
                         <div class="faq-item">
                             <div class="faq-question">
                                 <h3>How much do your services cost?</h3>
@@ -220,7 +217,6 @@
                                     upfront quotes with no hidden fees.</p>
                             </div>
                         </div>
-
                         <div class="faq-item">
                             <div class="faq-question">
                                 <h3>Do you offer warranties on your plumbing work?</h3>
@@ -238,7 +234,8 @@
                         </h3>
                         <p>Contact us for support, inquiries, or partnerships—we’re happy to assist!
                         </p>
-                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
+                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png"
+                                alt="" />
                             Contact Us</a>
                     </div>
 
@@ -258,7 +255,7 @@
                 <!-- Brand Column -->
                 <div class="footer-brand">
                     <div class="footer-brand__logo">
-                        <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="SwiftRooter Logo" /></a>
+                        <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
                     </div>
                     <p class="footer-brand__description">
                         Fast, reliable & professional 24/7 plumbing & rooter services.
@@ -270,7 +267,7 @@
                     <h3 class="footer-column__title">Explore</h3>
                     <ul class="footer-column__list">
                         <li><a href="index.html" class="footer-column__link">Home</a></li>
-                         <li><a href="index.html#location__section" class="footer-column__link">Location</a></li>
+                        <li><a href="index.html#location__section" class="footer-column__link">Location</a></li>
                         <li><a href="index.html#services" class="footer-column__link">Services</a></li>
                         <li><a href="index.html#faqs" class="footer-column__link">FAQ</a></li>
                     </ul>
