--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Site Title -->
-    <title>SwiftRooter - Plumbing Service Template</title>
+    <title>QnixRooter - Plumbing Service Template</title>
 
     <!-- Character Set and Responsive Meta Tags -->
     <meta charset="utf-8" />
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-                <a href="index.html"><img src="assets/images/logo/logo.jpeg" alt="Brand Logo" /></a>
+                <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -64,13 +64,13 @@
             <img src="assets/images/hero-images.avif" alt="Hero Images" />
         </div>
         <div class="hero__caption">
-            <h1 data-aos="fade-up" data-aos-duration="1000"><span class="text-red">Swift</span><span
+            <h1 data-aos="fade-up" data-aos-duration="1000"><span class="text-red">Qnix</span><span
                     class="text-blue">Rooter</span> - Fast &amp; <br> Reliable
                 Plumbing
                 Services</h1>
             <p data-aos="fade-up" data-aos-duration="1000">Your trusted partner for fast, reliable, and professional
                 plumbing and rooter services. Whether it's a
-                clogged drain, emergency plumbing, or a full pipe replacement, SwiftRooter has you covered 24/7.</p>
+                clogged drain, emergency plumbing, or a full pipe replacement, QnixRooter has you covered 24/7.</p>
             <div class="membership__container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="member__images">
                     <div class="images_list">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <p class="contact-form__disclaimer">
-                    By submitting your contact details, you agree to receive automated SMS/MMS messages from SwiftRooter
+                    By submitting your contact details, you agree to receive automated SMS/MMS messages from QnixRooter
                     Plumbing. Message & data rates may apply.
                 </p>
             </form>
@@ -129,7 +129,7 @@
     <!-- Hero Banner Section End -->
 
     <!-- Services Section Start -->
-    <section class="services__section  pt-80 pb-80" id="services">
+    <section class="services__section pt-80 pb-80" id="services">
         <div class="auto-container">
             <div class="services__header">
                 <div class="section__header">
@@ -154,7 +154,7 @@
             <!-- Residential Services Grid -->
             <div class="services__grid" id="residential-grid">
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
-                onclick="window.location.href='24-7-emergency-plumbing.html'">
+                    onclick="window.location.href='24-7-emergency-plumbing.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">24/7 Emergency Plumbing</h3>
@@ -166,7 +166,8 @@
                         <p class="service-card__description">Quick response for leaks, burst pipes, and urgent plumbing
                             issues.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-1.avif" alt="Emergency Plumbing">
+                    <img class="service-card__image" src="assets/images/services/services-man-1.jpg"
+                        alt="Emergency Plumbing">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -180,7 +181,8 @@
                         </div>
                         <p class="service-card__description">Removing clogs and ensuring smooth water flow.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-2.avif" alt="Drain Cleaning">
+                    <img class="service-card__image" src="assets/images/services/services-man-2.jpg"
+                        alt="Drain Cleaning">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -195,7 +197,8 @@
                         <p class="service-card__description">Installation, repair, and maintenance of all water heater
                             types.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-3.avif" alt="Water Heaters">
+                    <img class="service-card__image" src="assets/images/services/services-man-3.jpg"
+                        alt="Water Heaters">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -210,7 +213,8 @@
                         <p class="service-card__description">Repairs and installations for faucets, sinks, toilets, and
                             showers.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-4.avif" alt="Bathroom & Kitchen">
+                    <img class="service-card__image" src="assets/images/services/services-man-4.jpg"
+                        alt="Bathroom & Kitchen">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -225,7 +229,8 @@
                         <p class="service-card__description">Identifying and fixing hidden water leaks to prevent
                             damage.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-5.avif" alt="Leak Detection">
+                    <img class="service-card__image" src="assets/images/services/services-man-5.jpg"
+                        alt="Leak Detection">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -239,7 +244,8 @@
                         </div>
                         <p class="service-card__description">Cleaning, repair, and maintenance of sewer and septic.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-6.avif" alt="Sewer & Septic">
+                    <img class="service-card__image" src="assets/images/services/services-man-6.jpg"
+                        alt="Sewer & Septic">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -254,7 +260,8 @@
                         <p class="service-card__description">Repair and installation of efficient waste disposal units.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-7.avif" alt="Garbage Disposal">
+                    <img class="service-card__image" src="assets/images/services/services-man-7.jpg"
+                        alt="Garbage Disposal">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -269,7 +276,7 @@
                         <p class="service-card__description">Replacing old, damaged, or leaking pipes for long-term
                             reliability.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-8.avif" alt="Repiping">
+                    <img class="service-card__image" src="assets/images/services/services-man-8.jpg" alt="Repiping">
                 </article>
 
             </div>
@@ -288,7 +295,7 @@
                         <p class="service-card__description">Preventative cleaning and repair to avoid costly blockages.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-9.avif"
+                    <img class="service-card__image" src="assets/images/services/services-man-9.jpg"
                         alt="Commercial Plumbing Systems">
                 </article>
 
@@ -304,7 +311,7 @@
                         <p class="service-card__description">Installation and maintenance to keep commercial kitchens
                             compliant.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-10.avif"
+                    <img class="service-card__image" src="assets/images/services/services-man-10.jpg"
                         alt="Industrial Pipe Installation">
                 </article>
 
@@ -320,7 +327,8 @@
                         <p class="service-card__description">Large-scale installation and servicing for business
                             properties.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-11.avif" alt="Restaurant Plumbing">
+                    <img class="service-card__image" src="assets/images/services/services-man-11.jpg"
+                        alt="Restaurant Plumbing">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -336,7 +344,8 @@
                             office buildings.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-12.avif" alt="Backflow Prevention">
+                    <img class="service-card__image" src="assets/images/services/services-man-12.jpg"
+                        alt="Backflow Prevention">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -351,7 +360,7 @@
                         <p class="service-card__description">Scheduled servicing to prevent plumbing issues in
                             businesses.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-13.avif"
+                    <img class="service-card__image" src="assets/images/services/services-man-13.jpg"
                         alt="Grease Trap Services">
                 </article>
 
@@ -367,7 +376,8 @@
                         <p class="service-card__description">Ensuring safe and uncontaminated water supply.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-14.avif" alt="Water Line Repair">
+                    <img class="service-card__image" src="assets/images/services/services-man-12.jpg"
+                        alt="Water Line Repair">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -382,7 +392,8 @@
                         <p class="service-card__description">Safe installation and repair of commercial gas pipelines.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-15.avif" alt="Hydro Jetting">
+                    <img class="service-card__image" src="assets/images/services/services-man-14.jpg"
+                        alt="Hydro Jetting">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -397,9 +408,11 @@
                         <p class="service-card__description">High-pressure water cleaning for tough clogs and buildup.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-16.avif" alt="Boiler Systems">
+                    <img class="service-card__image" src="assets/images/services/services-man-15.jpg"
+                        alt="Boiler Systems">
                 </article>
             </div>
+
         </div>
     </section>
     <!-- Services Section End -->
@@ -417,7 +430,7 @@
                                 </path>
                             </g>
                         </svg>Why Choose Us</span>
-                    <h2 class="main-title">Why Choose SwiftRooter?</h2>
+                    <h2 class="main-title">Why Choose QnixRooter?</h2>
                     <p class="desc">Reliable, fast, and professional plumbing solutions with 24/7 availability, upfront
                         pricing, and
                         expert service for homes and businesses.</p>
@@ -608,11 +621,11 @@
                 <div class="trusted__plumbing--images">
                     <div class="plumbing__grid--images">
                         <div class="plumbing__one-images">
-                            <img src="assets/images/trusted-plumbing-1.avif" alt="Trusted Plumbing" />
+                            <img src="assets/images/services/trusted-plumbing-1.jpg" alt="Trusted Plumbing" />
                         </div>
                         <div class="plumbing__two-images">
-                            <img src="assets/images/trusted-plumbing-2.avif" alt="Trusted Plumbing" />
-                            <img src="assets/images/trusted-plumbing-3.avif" alt="Trusted Plumbing" />
+                            <img src="assets/images/services/trusted-plumbing-2.avif" alt="Trusted Plumbing" />
+                            <img src="assets/images/services/trusted-plumbing-3.avif" alt="Trusted Plumbing" />
                         </div>
                     </div>
                 </div>
@@ -653,7 +666,7 @@
                         <a href="#"><i class="fa-solid fa-star"></i></a>
                         <a href="#"><i class="fa-solid fa-star"></i></a>
                     </div>
-                    <p class="testimonial__text">SwiftRooter responded quickly and fixed my burst pipe in no time!
+                    <p class="testimonial__text">QnixRooter responded quickly and fixed my burst pipe in no time!
                         Highly recommend their service!</p>
 
                 </div>
@@ -719,7 +732,7 @@
                         Questions & Answers</span>
                     <h2 class="main-title">Frequently Asked<br> Questions</h2>
                     <div class="faq-images">
-                        <img src="assets/images/faq-man.avif" alt="FAQ Image" />
+                        <img src="assets/images/services/pleased-young.jpg" alt="FAQ Image" />
                     </div>
                 </div>
 
@@ -780,16 +793,15 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="faq-contact-box">
                         <h3>Need More Help?
                         </h3>
                         <p>Contact us for support, inquiries, or partnerships—we’re happy to assist!
                         </p>
-                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
+                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png"
+                                alt="" />
                             Contact Us</a>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -809,7 +821,7 @@
                         </g>
                     </svg>
                     Our Location</span>
-                <h2 class="main-title">Where Does SwiftRooter<br> Operate?</h2>
+                <h2 class="main-title">Where Does QnixRooter<br> Operate?</h2>
                 <p class="desc">We proudly serve multiple locations, ensuring prompt<br> and reliable plumbing services
                     near you.</p>
 
@@ -817,10 +829,10 @@
             <div class="our__location--grid">
                 <div class="our__location--content" data-aos="fade-up" data-aos-duration="1200">
                     <div class="location__icon-box">
-                        <img src="assets/images/location-1.avif" alt="Location Images" />
+                        <img src="assets/images/services/location-1.jpg" alt="Location Images" />
                     </div>
                     <div class="location__text-box">
-                        <h2>SwiftRooter Headquarters</h2>
+                        <h2>QnixRooter Headquarters</h2>
                         <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
                                 <g weight="regular">
                                     <path
@@ -833,10 +845,10 @@
 
                 <div class="our__location--content" data-aos="fade-up" data-aos-duration="1600">
                     <div class="location__icon-box">
-                        <img src="assets/images/location-2.avif" alt="Location Images" />
+                        <img src="assets/images/services/location-2.jpg" alt="Location Images" />
                     </div>
                     <div class="location__text-box">
-                        <h2>SwiftRooter Office</h2>
+                        <h2>QnixRooter Office</h2>
                         <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
                                 <g weight="regular">
                                     <path
@@ -852,7 +864,7 @@
 
     <!-- Our Location Section End -->
 
-     <!-- Footer Section Start -->
+    <!-- Footer Section Start -->
     <footer class="footer" data-aos="fade-up" data-aos-duration="1200">
         <div class="footer__container">
             <!-- Top Section with Navigation -->
@@ -860,7 +872,7 @@
                 <!-- Brand Column -->
                 <div class="footer-brand">
                     <div class="footer-brand__logo">
-                        <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="SwiftRooter Logo" /></a>
+                        <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
                     </div>
                     <p class="footer-brand__description">
                         Fast, reliable & professional 24/7 plumbing & rooter services.
@@ -872,7 +884,7 @@
                     <h3 class="footer-column__title">Explore</h3>
                     <ul class="footer-column__list">
                         <li><a href="index.html" class="footer-column__link">Home</a></li>
-                         <li><a href="#location__section" class="footer-column__link">Location</a></li>
+                        <li><a href="#location__section" class="footer-column__link">Location</a></li>
                         <li><a href="index.html#services" class="footer-column__link">Services</a></li>
                         <li><a href="index.html#faqs" class="footer-column__link">FAQ</a></li>
                     </ul>
@@ -987,4 +999,5 @@
 
 
 </body>
+
 </html>
