--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Site Title -->
-    <title>SwiftRooter - Plumbing Service Template</title>
+    <title>QnixRooter - Plumbing Service Template</title>
 
     <!-- Character Set and Responsive Meta Tags -->
     <meta charset="utf-8" />
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-                <a href="index.html"><img src="assets/images/logo/logo.jpeg" alt="Brand Logo" /></a>
+                 <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -58,7 +58,6 @@
         </div>
     </header>
     <!-- Header Section End -->
-
 
     <!-- Services Section Start -->
     <section class="services__section mt-100 pt-80 pb-80">
@@ -97,7 +96,8 @@
                         <p class="service-card__description">Quick response for leaks, burst pipes, and urgent plumbing
                             issues.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-1.avif" alt="Emergency Plumbing">
+                    <img class="service-card__image" src="assets/images/services/services-man-1.jpg"
+                        alt="Emergency Plumbing">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -111,7 +111,8 @@
                         </div>
                         <p class="service-card__description">Removing clogs and ensuring smooth water flow.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-2.avif" alt="Drain Cleaning">
+                    <img class="service-card__image" src="assets/images/services/services-man-2.jpg"
+                        alt="Drain Cleaning">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -126,7 +127,8 @@
                         <p class="service-card__description">Installation, repair, and maintenance of all water heater
                             types.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-3.avif" alt="Water Heaters">
+                    <img class="service-card__image" src="assets/images/services/services-man-3.jpg"
+                        alt="Water Heaters">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -141,7 +143,8 @@
                         <p class="service-card__description">Repairs and installations for faucets, sinks, toilets, and
                             showers.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-4.avif" alt="Bathroom & Kitchen">
+                    <img class="service-card__image" src="assets/images/services/services-man-4.jpg"
+                        alt="Bathroom & Kitchen">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -156,7 +159,8 @@
                         <p class="service-card__description">Identifying and fixing hidden water leaks to prevent
                             damage.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-5.avif" alt="Leak Detection">
+                    <img class="service-card__image" src="assets/images/services/services-man-5.jpg"
+                        alt="Leak Detection">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -170,7 +174,8 @@
                         </div>
                         <p class="service-card__description">Cleaning, repair, and maintenance of sewer and septic.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-6.avif" alt="Sewer & Septic">
+                    <img class="service-card__image" src="assets/images/services/services-man-6.jpg"
+                        alt="Sewer & Septic">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -185,7 +190,8 @@
                         <p class="service-card__description">Repair and installation of efficient waste disposal units.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-7.avif" alt="Garbage Disposal">
+                    <img class="service-card__image" src="assets/images/services/services-man-7.jpg"
+                        alt="Garbage Disposal">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -200,7 +206,7 @@
                         <p class="service-card__description">Replacing old, damaged, or leaking pipes for long-term
                             reliability.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-8.avif" alt="Repiping">
+                    <img class="service-card__image" src="assets/images/services/services-man-8.jpg" alt="Repiping">
                 </article>
 
             </div>
@@ -219,7 +225,7 @@
                         <p class="service-card__description">Preventative cleaning and repair to avoid costly blockages.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-9.avif"
+                    <img class="service-card__image" src="assets/images/services/services-man-9.jpg"
                         alt="Commercial Plumbing Systems">
                 </article>
 
@@ -235,7 +241,7 @@
                         <p class="service-card__description">Installation and maintenance to keep commercial kitchens
                             compliant.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-10.avif"
+                    <img class="service-card__image" src="assets/images/services/services-man-10.jpg"
                         alt="Industrial Pipe Installation">
                 </article>
 
@@ -251,7 +257,8 @@
                         <p class="service-card__description">Large-scale installation and servicing for business
                             properties.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-11.avif" alt="Restaurant Plumbing">
+                    <img class="service-card__image" src="assets/images/services/services-man-11.jpg"
+                        alt="Restaurant Plumbing">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -267,7 +274,8 @@
                             office buildings.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-12.avif" alt="Backflow Prevention">
+                    <img class="service-card__image" src="assets/images/services/services-man-12.jpg"
+                        alt="Backflow Prevention">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -282,7 +290,7 @@
                         <p class="service-card__description">Scheduled servicing to prevent plumbing issues in
                             businesses.</p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-13.avif"
+                    <img class="service-card__image" src="assets/images/services/services-man-13.jpg"
                         alt="Grease Trap Services">
                 </article>
 
@@ -298,7 +306,8 @@
                         <p class="service-card__description">Ensuring safe and uncontaminated water supply.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-14.avif" alt="Water Line Repair">
+                    <img class="service-card__image" src="assets/images/services/services-man-12.jpg"
+                        alt="Water Line Repair">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -313,7 +322,8 @@
                         <p class="service-card__description">Safe installation and repair of commercial gas pipelines.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-15.avif" alt="Hydro Jetting">
+                    <img class="service-card__image" src="assets/images/services/services-man-14.jpg"
+                        alt="Hydro Jetting">
                 </article>
 
                 <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
@@ -328,9 +338,11 @@
                         <p class="service-card__description">High-pressure water cleaning for tough clogs and buildup.
                         </p>
                     </div>
-                    <img class="service-card__image" src="assets/images/services-man-16.avif" alt="Boiler Systems">
+                    <img class="service-card__image" src="assets/images/services/services-man-15.jpg"
+                        alt="Boiler Systems">
                 </article>
             </div>
+
         </div>
     </section>
     <!-- Services Section End -->
@@ -405,7 +417,6 @@
     </section>
     <!-- Service Step section End -->
 
-
     <!-- Our Location Section Start -->
     <section class="our__location--section pt-80 pb-80" id="location__section">
         <div class="auto-container">
@@ -419,7 +430,7 @@
                         </g>
                     </svg>
                     Our Location</span>
-                <h2 class="main-title">Where Does SwiftRooter<br> Operate?</h2>
+                <h2 class="main-title">Where Does QnixRooter<br> Operate?</h2>
                 <p class="desc">We proudly serve multiple locations, ensuring prompt<br> and reliable plumbing services
                     near you.</p>
 
@@ -427,10 +438,10 @@
             <div class="our__location--grid">
                 <div class="our__location--content" data-aos="fade-up" data-aos-duration="1200">
                     <div class="location__icon-box">
-                        <img src="assets/images/location-1.avif" alt="Location Images" />
+                        <img src="assets/images/services/location-1.jpg" alt="Location Images" />
                     </div>
                     <div class="location__text-box">
-                        <h2>SwiftRooter Headquarters</h2>
+                        <h2>QnixRooter Headquarters</h2>
                         <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
                                 <g weight="regular">
                                     <path
@@ -443,10 +454,10 @@
 
                 <div class="our__location--content" data-aos="fade-up" data-aos-duration="1600">
                     <div class="location__icon-box">
-                        <img src="assets/images/location-2.avif" alt="Location Images" />
+                        <img src="assets/images/services/location-2.jpg" alt="Location Images" />
                     </div>
                     <div class="location__text-box">
-                        <h2>SwiftRooter Office</h2>
+                        <h2>QnixRooter Office</h2>
                         <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
                                 <g weight="regular">
                                     <path
@@ -469,7 +480,7 @@
                 <!-- Brand Column -->
                 <div class="footer-brand">
                     <div class="footer-brand__logo">
-                        <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="SwiftRooter Logo" /></a>
+                        <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
                     </div>
                     <p class="footer-brand__description">
                         Fast, reliable & professional 24/7 plumbing & rooter services.
@@ -578,6 +589,7 @@
             </div>
         </div>
     </footer>
+
     <!-- Footer Section End -->
 
     <!-- JavaScript Library -->
