--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
     <!-- Hero Banner Section Start -->
     <section class="hero__banner--section">
         <div class="hero__bgimages">
-            <img src="assets/images/hero-images.avif" alt="Hero Images" />
+            <img src="assets/images/banner-images.png" alt="Hero Images" />
         </div>
         <div class="hero__caption">
             <h1 data-aos="fade-up" data-aos-duration="1000"><span class="text-red">Qnix</span><span
                     class="text-blue">Rooter</span> - Fast &amp; <br> Reliable
-                Plumbing
-                Services</h1>
+               <span class="text-red"> Plumbing Services </span></h1>
             <p data-aos="fade-up" data-aos-duration="1000">Your trusted partner for fast, reliable, and professional
                 plumbing and rooter services. Whether it's a
                 clogged drain, emergency plumbing, or a full pipe replacement, QnixRooter has you covered 24/7.</p>
